emoji tokens added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,31 @@
     <div id="gameboard"></div>
     <div id="controls">
         <input type="text" id="playerOne" placeholder="Player One Name">
-        <button id="playerOneEmojiButton" class="emoji-button">Select Emoji</button>
-
+        <select id="emojiOne">
+            <option value="😀">😀</option>
+            <option value="🗡️">🗡️</option>
+            <option value="🚀">🚀</option>
+            <option value="🏹">🏹</option>
+            <option value="💣">💣</option>
+            <option value="⚡️">⚡️</option>
+            <option value="⚠️">⚠️</option>
+            <option value="X">X</option>
+            <option value="᮰">᮰</option>
+        </select>
+        
         <input type="text" id="playerTwo" placeholder="Player Two Name">
-        <button id="playerTwoEmojiButton" class="emoji-button">Select Emoji</button>
+        <select id="emojiOne">
+            <option value="😀">😀</option>
+            <option value="🗡️">🗡️</option>
+            <option value="🚀">🚀</option>
+            <option value="🏹">🏹</option>
+            <option value="💣">💣</option>
+            <option value="⚡️">⚡️</option>
+            <option value="⚠️">⚠️</option>
+            <option value="X">X</option>
+            <option value="᮰">᮰</option>
+        </select>
+
         
         <button id="start-button">Start Game</button>
         <button id="restart-button">Restart Game</button>
